# cmake-examples

qt5/: CMakeLists.txt  main.cpp
